Sign2Text_training-16785573.err
Loaded dependency [python3/3.10.7]: gcc/11.3.0-binutils-2.38
Loaded module: python3/3.10.7

Loading python3/3.10.7
  Loading requirement: gcc/11.3.0-binutils-2.38
Loaded module: cuda/12.0
Loaded module: cudnn/v8.3.2.44-prod-cuda-11.X
Traceback (most recent call last):
  File "/zhome/6b/b/151617/Sign2Text/main.py", line 7, in <module>
    from configs.Training_config import Training_cfg
  File "/zhome/6b/b/151617/Sign2Text/configs/Training_config.py", line 27
    self.load_checkpoint_path =  # '/work3/s200925/Sign2Text/final_training/Sign2Text_Epoch37_loss_18.47734777784307_B4_0.25157189075688613' # '/work3/s200925/Sign2Text/label_smooth/Sign2Text_Epoch37_loss_16.43221887015436_B4_0.2297965381199748'
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
